--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
   "dependencies": {
     "ejs": "^2.4.1",
     "express": "^4.13.4"
+  },
+  "devDependencies": {
+    "body-parser": "^1.15.0",
+    "method-override": "^2.3.5",
+    "mongodb": "^2.1.18",
+    "mongoose": "^4.4.14"
   }
 }
